feat(storage): safely eject removable devices
